--- a/requirements.yml
+++ b/requirements.yml
@@ -14,3 +14,5 @@ Implicit:
   - При примененни фильтра страница не должна полностью обновлятся
   - Все названия брендов в фильтре должны соответсовать тому как пишут сами бренды
   - Должна быть кнопка очистить все фильтры
+  - Категория производитель должна иметь форму поиска конктреного производителя
+  - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
