--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,20 +1,17 @@
 ---
   - summary: |
-      Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+      Проверка возможности добавления товара в корзину
     requirement: |
-      Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
+      При нажатии кнопки в корзину, товар добавляется в корзину
     prerequisites: |
-      Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
-      Например: открыта страница логина
+      открыть сайт https://hexlet-products-store.vercel.app/
     test-data: |
-      Тестовые данные
-      Логин = ilona Пароль = password
+      нет
     steps:
-      - Вводим логин
-      - Вводим пароль
-      - Нажимаем кнопку "Войти"
+      - Нажимаем кнопку в корзину на карточке товара
+      - в шапке сайта нажимаем кнопку корзина
     expected-result: |
-      Пользователь должен попасть на главную страницу
+      Товар добавлен в корзину
 
   - summary: |
       Проверка входа пользователя с несуществующими логином и паролем
