--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,29 +1,86 @@
 ---
   - summary: |
-      Проверка возможности добавления товара в корзину
+      Проверка возможности поиска товара по ключевому слову
     requirement: |
-      При нажатии кнопки в корзину, товар добавляется в корзину
+      при вводе ключевого слова должны отобразится связанные с ним товары
+    prerequisites: |
+      открыт сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      Тестовые данные
+      Ключевое слово = "SIM-Free"
+    steps:
+      - Нажимаем в левой верхней левой части страницы на форму поиска
+      - Вводим ключевое слово "SIM-Free"
+    expected-result: |
+      Отображен товар найденный по ключевому слову
+
+  - summary: |
+      Проверка поиска товара по категории при вводе в строке поиска
+    requirement: |
+      При вводе категории в строку поиска отображаются товары в этой категории
+    prerequisites:
+      открыт сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      Категория laptops
+    steps:
+      - Нажимаем в левой верхней левой части страницы на форму поиска
+      - Вводим название категории "laptops"
+    expected-result: |
+      Отображаются все товары категории "laptops"
+
+- summary: |
+      Проверка возможности фильтровать товар по цене
+    requirement: |
+      При вводе диапазона цены отображаются товары внутри этого диапазона
     prerequisites: |
       открыть сайт https://hexlet-products-store.vercel.app/
     test-data: |
-      нет
+      Диапазон цены от 200$ до 300$
     steps:
-      - Нажимаем кнопку в корзину на карточке товара
-      - в шапке сайта нажимаем кнопку корзина
+      - В левой части меню в поле цена вводим в поле от - 200, в поле до - 300
     expected-result: |
-      Товар добавлен в корзину
-
-  - summary: |
-      Проверка входа пользователя с несуществующими логином и паролем
+      отображается товар подходящий по цене
+      
+- summary: |
+      Проверка возможности фильтровать товар по категории
     requirement: |
-      При неправильном логине или пароле пользователь должен получить сообщение об ошибке
-    prerequisites:
-      Открыта страница логина
+      При выборе конкретной категории, отображаются товары из этой категории
+    prerequisites: |
+      открыть сайт https://hexlet-products-store.vercel.app/
     test-data: |
-      Логин = Логин = hexlet Пароль = badpass
+      Категория laptops
     steps:
-      - Вводим логин
-      - Вводим пароль
-      - Нажимаем кнопку "Войти"
+      - В левой части сраницы в меню Категория, выбираем laptops
     expected-result: |
-      Пользователь должен попасть на главную страницу
+      отображается товар подходящий по категории
+            
+- summary: |
+      Проверка возможности открыть карточку товара
+    requirement: |
+      При нажатии на товар открывается карточка товара
+    prerequisites: |
+      открыть сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      Выбираем товар iPhone X
+    steps:
+      - Нажимаем на товар iPhone X
+    expected-result: |
+      Открывается карточка товара
+      
+           
+- summary: |
+      Проверка возможности добавить товар в корзину
+    requirement: |
+      При нажатии на кнопку "В корзину" товар добавляется в корзину
+    prerequisites: |
+      открыть сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      Выбираем товар iPhone X
+    steps:
+      - ищем товар iPhone X
+      - нажимаем на кнопку "В корзину"
+      - в верхней части страницы нажимаем на кнопку "Корзина"
+    expected-result: |
+      отображается товар добавленный в корзину
+      
+      
