--- a/requirements.yml
+++ b/requirements.yml
@@ -1,15 +1,15 @@
 Functional:
-  - Пользователь должен иметь возможность искать товары по ключевому слову или категории.
-  - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
-  - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
-  - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.
+  - Пользователь должен иметь возможность искать товары по ключевому слову или категории.+
+  - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.+
+  - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.+
+  - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.+
 Non_functionl:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
   - Сайт должен быть безопасным и защищать данные пользователя.
   - Сайт должен иметь мобильную версию.
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров.
   - Сайт должен быть способен обрабатывать большое количество трафика.
-  - Сайт должен быть доступен на различных устройствах.
+  - Сайт должен быть доступен на различных устройствах.+
 Implicit:
   - При примененни фильтра страница не должна полностью обновлятся
   - Все названия брендов в фильтре должны соответсовать тому как пишут сами бренды
