--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,8 +1,28 @@
 ---
 - summary: |
-    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+    Проверка возможности поиска товара по ключевому слову
   status: fail
 
 - summary: |
-    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+    Проверка поиска товара по категории при вводе в строке поиска
+  status: fail
+
+- summary: |
+    Проверка возможности фильтровать товар по цене
+  status: pass
+  
+- summary: |
+    Проверка возможности фильтровать товар по категории
+  status: pass
+
+- summary: |
+    Проверка возможности открыть карточку товара
+  status: pass
+  
+- summary: |
+    Проверка возможности добавить товар в корзину
+  status: pass
+  
+- summary: |
+    Проверка доступности сайта на мобильном устройстве
   status: pass
