--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,14 +1,22 @@
 ---
 - summary: |
-    Короткое описание ошибки
+    При обновлении страницы возвращаются удаленные объекты из корзины
   environment: |
-    Ссылка на билд/коммит/версия ПО и всего окружения
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
   steps-to-reproduce: |
-    Полный перечень шагов для воспроизведения, на каком шаге произошла ошибка
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. В верхнем правом углу нажимаем кнопку "Language"
+    3. Выбираем "Russian"
+    4. Нажимаем кнопку "В корзину" у любого товара
+    5. В верхнем правом углу нажимаем кнопку "Корзина"
+    6. В верхней части страницы нажимаем "Очистить корзину"
+    7. Нажимаем кнопку обновить страницу
   expected-result: |
-    Какой результат должен был быть без ошибки
+    Корзина пустая без добавленных товаров
   actual-result: |
-    Какой результат получился на самом деле
+    В корзине отображается товар который мы удалили
     
 - summary: |
     Не работает восстановление пароля
