--- a/test-cases.yml
+++ b/test-cases.yml
@@ -96,3 +96,46 @@
       - открыть сайт https://hexlet-products-store.vercel.app/
     expected-result: |
       отображается сайт https://hexlet-products-store.vercel.app/
+      
+- summary: |
+      Проверка доступности сайта в браузере Mozila Firefox
+    requirement: |
+      При открытии сайта на в браузере Mozila Firefox отображаетс сайт
+    prerequisites: |
+      браузер Mozila Firefox
+      открыть сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      сайт https://hexlet-products-store.vercel.app/
+    steps:
+      - открыть сайт https://hexlet-products-store.vercel.app/
+    expected-result: |
+      отображается сайт https://hexlet-products-store.vercel.app/
+      
+- summary: |
+      Проверка доступности сайта в браузере Opera
+    requirement: |
+      При открытии сайта на в браузере Opera отображаетс сайт
+    prerequisites: |
+      браузер Opera
+      открыть сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      сайт https://hexlet-products-store.vercel.app/
+    steps:
+      - открыть сайт https://hexlet-products-store.vercel.app/
+    expected-result: |
+      отображается сайт https://hexlet-products-store.vercel.app/
+      
+- summary: |
+      Проверка доступности сайта в браузере Microsoft Edge
+    requirement: |
+      При открытии сайта на в браузере Microsoft Edge отображаетс сайт
+    prerequisites: |
+      браузер Microsoft Edge
+      открыть сайт https://hexlet-products-store.vercel.app/
+    test-data: |
+      сайт https://hexlet-products-store.vercel.app/
+    steps:
+      - открыть сайт https://hexlet-products-store.vercel.app/
+    expected-result: |
+      отображается сайт https://hexlet-products-store.vercel.app/
+      
