--- a/requirements.yml
+++ b/requirements.yml
@@ -7,7 +7,7 @@ Non_functionl:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.+
   - Сайт должен быть безопасным и защищать данные пользователя.
   - Сайт должен иметь мобильную версию.+
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров.
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров.+
   - Сайт должен быть способен обрабатывать большое количество трафика.
   - Сайт должен быть доступен на различных устройствах.+
 Implicit:
@@ -16,3 +16,4 @@ Implicit:
   - Должна быть кнопка очистить все фильтры
   - Категория производитель должна иметь форму поиска конктреного производителя
   - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
+  - Корзина хранится в сессии браузера
