--- a/requirements.yml
+++ b/requirements.yml
@@ -5,7 +5,7 @@ Functional:
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.+
 Non_functionl:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.+
-  - Сайт должен быть безопасным и защищать данные пользователя.
+  - Сайт должен быть безопасным и защищать данные пользователя.+
   - Сайт должен иметь мобильную версию.+
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров.+
   - Сайт должен быть способен обрабатывать большое количество трафика.
@@ -17,3 +17,4 @@ Implicit:
   - Категория производитель должна иметь форму поиска конктреного производителя
   - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
   - Корзина хранится в сессии браузера
+  
