--- a/requirements.yml
+++ b/requirements.yml
@@ -16,5 +16,5 @@ Implicit:
   - Должна быть кнопка очистить все фильтры
   - Категория производитель должна иметь форму поиска конктреного производителя
   - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
-  - Корзина хранится в сессии браузера
+  - Корзина хранится в сессии браузера+
   
