--- a/test-cases.yml
+++ b/test-cases.yml
@@ -88,7 +88,8 @@
     requirement: |
       При открытии сайта на мобильном устройстве отображаетс сайт
     prerequisites: |
-      мобильный телефон
+      мобильный телефон iphone 12 mini
+      браузер Safari
       открыть сайт https://hexlet-products-store.vercel.app/
     test-data: |
       сайт https://hexlet-products-store.vercel.app/
@@ -153,7 +154,7 @@
       отображается сайт https://hexlet-products-store.vercel.app/
       
 - summary: |
-      Проверка возможности оормить заказ
+      Проверка возможности оформить заказ
     requirement: |
       При нажатии на кнопку "Оформить заказ" в Корзине появляется сообщение о успешном оформлении
     prerequisites: |
@@ -166,3 +167,20 @@
       - Нажать кнопку "Оформить заказ"
     expected-result: |
       отображается сообщение о успешном оформлении заказа
+
+- summary: |
+      Корзина хранится в сессии браузера
+    requirement: |
+      Товары в корзине сохраняются после закрыти страницы и открытии заново, не закрывая браузер
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - Нажать "В корзину" на карточке у любого товара
+      - В верхней правой части сайта нажать кнопку "Корзина"
+      - закрыть вкладку
+      - открыть сайт hexlet-products-store.vercel.app/
+      - В верхней правой части сайта нажать кнопку "Корзина"
+    expected-result: |
+      товары ранее добавленные в корзину сохраняются
