--- a/requirements.yml
+++ b/requirements.yml
@@ -17,4 +17,5 @@ Implicit:
   - Категория производитель должна иметь форму поиска конктреного производителя
   - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
   - Корзина хранится в сессии браузера+
-  
+  - Пользователь должен иметь возможность удалять товары из корзины
+  - Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
