--- a/test-cases.yml
+++ b/test-cases.yml
@@ -185,3 +185,18 @@
     expected-result: |
       товары ранее добавленные в корзину сохраняются
 
+- summary: |
+      возможнось попасть на страницу оплаты
+    requirement: |
+      после нажатия на кнопку "Оформить заказ" должно перекинуть на страницу оплаты
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - Нажать "В корзину" на карточке у любого товара
+      - В верхней правой части сайта нажать кнопку "Корзина"
+      - Нажать кнопку "Оформить заказ"
+      - открывается страница оплаты
+    expected-result: |
+      открывается страница оплаты
