--- a/test-cases.yml
+++ b/test-cases.yml
@@ -200,3 +200,29 @@
       - открывается страница оплаты
     expected-result: |
       открывается страница оплаты
+
+- summary: |
+      При примененни фильтра страница не должна полностью обновлятся
+    requirement: |
+      после нажатия на кнопку фильтра по производителю, страница не уходит в перезагрузку
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - поставить галочку фильтра напротив "Apple"
+    expected-result: |
+      отображает товары данной категории без перезагрузки страницы
+
+- summary: |
+      Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды
+    requirement: |
+      Сравнить на корректность названия всех брендов
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - в левом меню фильтра по производителю проверить корректность написания брендов
+    expected-result: |
+      в меню фильтра производителя отображает бренды корректно
