--- a/test-cases.yml
+++ b/test-cases.yml
@@ -226,3 +226,16 @@
       - в левом меню фильтра по производителю проверить корректность написания брендов
     expected-result: |
       в меню фильтра производителя отображает бренды корректно
+
+- summary: |
+      Названия брендов не дублируются
+    requirement: |
+      Сравнить на дубликаты названия всех брендов
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - в левом меню фильтра по производителю проверить дубли написания брендов
+    expected-result: |
+      в меню фильтра производителя отображает бренды без повторений
