--- a/requirements.yml
+++ b/requirements.yml
@@ -11,8 +11,9 @@ Non_functionl:
   - Сайт должен быть способен обрабатывать большое количество трафика.
   - Сайт должен быть доступен на различных устройствах.+
 Implicit:
-  - При примененни фильтра страница не должна полностью обновлятся
-  - Все названия брендов в фильтре должны соответсовать тому как пишут сами бренды
+  - При примененни фильтра страница не должна полностью обновлятся+
+  - Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды+
+  - Названия брендов не дублируются+
   - Должна быть кнопка очистить все фильтры
   - Категория производитель должна иметь форму поиска конктреного производителя
   - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
