--- a/requirements.yml
+++ b/requirements.yml
@@ -14,9 +14,7 @@ Implicit:
   - При примененни фильтра страница не должна полностью обновлятся+
   - Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды+
   - Названия брендов не дублируются+
-  - Должна быть кнопка очистить все фильтры
-  - Категория производитель должна иметь форму поиска конктреного производителя
-  - Категория производитель должна показывать поппулярные производителей с возможность нажать кнопку что бы отобразить всех производителей по алфавиту
+  - Пользователь должен иметь возможность поиска бренда, при вводе в строке поиска названия бренда+
   - Корзина хранится в сессии браузера+
-  - Пользователь должен иметь возможность удалять товары из корзины
-  - Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
+  - Пользователь должен иметь возможность удалять товары из корзины+
+  - Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты+
