--- a/test-cases.yml
+++ b/test-cases.yml
@@ -186,7 +186,7 @@
       товары ранее добавленные в корзину сохраняются
 
 - summary: |
-      возможнось попасть на страницу оплаты
+      Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
     requirement: |
       после нажатия на кнопку "Оформить заказ" должно перекинуть на страницу оплаты
     prerequisites: |
@@ -239,3 +239,32 @@
       - в левом меню фильтра по производителю проверить дубли написания брендов
     expected-result: |
       в меню фильтра производителя отображает бренды без повторений
+
+- summary: |
+      Пользователь должен иметь возможность поиска бренда, при вводе в строке поиска названия бренда
+    requirement: |
+      в левом меню фильтр, в строке поиска можно ввести название бренда и отобразить все его товары
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - в левой части сайта нажать на форму поиска
+      - ввести название "Apple"
+    expected-result: |
+      отображаются товары данной категории
+
+- summary: |
+      Пользователь должен иметь возможность удалять товары из корзины
+    requirement: |
+      при нажатии кнопки "Удалить" в корзине, товар удаляется
+    prerequisites: |
+      открыть сайт hexlet-products-store.vercel.app/
+    test-data: |
+      сайт hexlet-products-store.vercel.app/
+    steps:
+      - Нажать кнопку "В корзину" в карточке любого товара
+      - нажать кнопку "Корзина"
+      - нажать кнопку "Удалить"
+    expected-result: |
+      товар удален из корзины
