--- a/testing-report.yml
+++ b/testing-report.yml
@@ -26,3 +26,52 @@
 - summary: |
     Проверка доступности сайта на мобильном устройстве
   status: pass
+
+- summary: |
+    Проверка доступности сайта в браузере Mozila Firefox
+  status: pass
+
+- summary: |
+    Проверка доступности сайта в браузере Opera
+  status: pass
+
+- summary: |
+    Проверка доступности сайта в браузере Microsoft Edge
+  status: pass
+
+- summary: |
+    Проверка использует ли сайт протокол HTTPS
+  status: pass
+
+
+- summary: |
+    Проверка возможности оформить заказ
+  status: pass
+
+- summary: |
+    Корзина хранится в сессии браузера
+  status: fail
+
+- summary: |
+    Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
+  status: fail
+
+- summary: |
+    При примененни фильтра страница не должна полностью обновлятся
+  status: pass
+
+- summary: |
+    Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды
+  status: fail
+
+- summary: |
+    Названия брендов не дублируются
+  status: fail
+
+- summary: |
+    Пользователь должен иметь возможность поиска бренда, при вводе в строке поиска названия бренда
+  status: pass
+
+- summary: |
+    Пользователь должен иметь возможность удалять товары из корзины
+  status: pass
