--- a/bugreports.yml
+++ b/bugreports.yml
@@ -19,34 +19,33 @@
     В корзине отображается товар который мы удалили
     
 - summary: |
-    Не работает восстановление пароля
+    Нет возможности очистить фильт после выбора категории
   environment: |
-    Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
-    ОС Linux 22.04
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
   steps-to-reproduce: |
-    1. Зайти на страницу логина https://runit.hexlet.ru/login
-    2. Нажать ссылку "не помню пароль"
-    3. Ввести почту и нажать "Восстановить пароль"
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Нажать на кнопку "Категория"
+    3. Выбрать категорию "smartphones"
+    4. Нажать на кнопку "Категория"
+    5. повторно нажать на категорию "smartphones"
   expected-result: |
-    На странице формы будет сообщение с просьбой проверить почту.
-    На почту придет письмо со ссылкой на восстановление пароля.
+    фильтр по категории сбросился
   actual-result: |
-    На странице ничего не происходит.
-    В консоли браузера в Devtools выводится почта
+    при нажатии ничего не происходит, кнопки сбросиь фильтр тоже нет
 
 - summary: |
-    Изменяется url в адресной строке браузера, не работают вкладки LOBBY/TOURNAMENT/COMPLETED GAMES
+    Фильтр по цене ищет без учета скидки
   environment: |
-    Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
-    ОС Linux
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
   steps-to-reproduce: |
-    1. Залогиниться в системе https://codebattle.hexlet.io/session/new?locale=en&next=%2F
-    2. Переключить Лидерборд по сроку (месяц/неделя/за все время)
-    3. Переключить LOBBY/TOURNAMENT/COMPLETED GAMES
+    1. Зайти на страницу https://hexlet-products-store.vercel.app/
+    2. Ввести фильтр по цене от 100 до 500
   expected-result: |
-    url в адресной строке не меняется
-    Вкладки работают
+    отображаются товары в данном ценовом диапазоне
   actual-result: |
-    При нажатии на week,month,all в urlHash появляется '!'
-    Вкладки не работают.
+    отображаются товары без учета скидки
     Ошибка изображена на скриншоте assets/bug.png
