--- a/bugreports.yml
+++ b/bugreports.yml
@@ -49,3 +49,19 @@
   actual-result: |
     отображаются товары без учета скидки
     Ошибка изображена на скриншоте assets/bug.png
+
+- summary: |
+    После обновления страницы язык меняется на английкий, если был выбран русский перед этим
+  environment: |
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
+  steps-to-reproduce: |
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. В верхнем правом углу нажимаем кнопку "Language"
+    3. Выбираем "Russian"
+    4. Обновляем страницу
+  expected-result: |
+    обновилась страница язык русский сохранился
+  actual-result: |
+    Язык страницы стал английским
