--- a/bugreports.yml
+++ b/bugreports.yml
@@ -65,3 +65,63 @@
     обновилась страница язык русский сохранился
   actual-result: |
     Язык страницы стал английским
+
+- summary: |
+    Не работает поиск по ключевому слову
+  environment: |
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
+  steps-to-reproduce: |
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. В верхней левой части страницы нажимаем на форму поиска по слову
+    3. Вводим слово "laptops"
+  expected-result: |
+    отобразились товары категории "laptops"
+  actual-result: |
+    результат поиска некорректен
+
+- summary: |
+    Не корректно работает фильтр по цене
+  environment: |
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
+  steps-to-reproduce: |
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. В нижней части левого меню ищем раздел цена
+    3. вводим от 400 до 700
+  expected-result: |
+    отобразились товары которые подходят в данный диапазон
+  actual-result: |
+    отображаются товары в данном диапазоне, не учитывая цену со скидкой
+
+- summary: |
+    Не отправляет данные о заказе на сервер 
+  environment: |
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
+  steps-to-reproduce: |
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. Добавляем любой товар в корзину
+    3. Нажимаем в вехней части сайта кнопку "Корзина"
+    4. Нажимаем кнопку "Оформить заказ"
+  expected-result: |
+    Данные отправлены на сервер
+  actual-result: |
+    Ошибка 500 в DevTools во вкладке Network
+
+- summary: |
+    Не ищет товар при ручном вводе бренда 
+  environment: |
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
+  steps-to-reproduce: |
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. В левом меню в строке поиск вводим бренд "apple"
+  expected-result: |
+    Отображаются товарны данного производителя
+  actual-result: |
+    Не отображает никакие товары
