--- a/bugreports.yml
+++ b/bugreports.yml
@@ -17,6 +17,7 @@
     Корзина пустая без добавленных товаров
   actual-result: |
     В корзине отображается товар который мы удалили
+    Ошибка изображена на скриншоте /main/При обновлении страницы возвращаются удаленные объекты из корзины.png
     
 - summary: |
     Нет возможности очистить фильт после выбора категории
@@ -111,6 +112,7 @@
     Данные отправлены на сервер
   actual-result: |
     Ошибка 500 в DevTools во вкладке Network
+    Ошибка изображена на скриншоте main/Не отправляются данные на сервер.png
 
 - summary: |
     Не ищет товар при ручном вводе бренда 
