--- a/bugreports.yml
+++ b/bugreports.yml
@@ -127,3 +127,19 @@
     Отображаются товарны данного производителя
   actual-result: |
     Не отображает никакие товары
+
+- summary: |
+    при переключении страницы с товарами, меняются производители в левом меню 
+  environment: |
+    Браузер
+    Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+    ОС	Windows 11 Домашняя
+  steps-to-reproduce: |
+    1. Открываем страницу https://hexlet-products-store.vercel.app/
+    2. Нажимаем кнопку "Следующая"
+  expected-result: |
+    страница переключилась на следующую, левое меню с производителями не изменилось
+  actual-result: |
+    страница переключилась на следующую, левое меню с производителями изменилось
+    производители на стартовой странице на скриншоте Производители на главной странице.png 
+    производители при нажатии кнопки "Следующая" на скриншоте производители при нажатии кнопки следующая.png
