--- a/bugreports.yml
+++ b/bugreports.yml
@@ -20,7 +20,7 @@
     Ошибка изображена на скриншоте /main/При обновлении страницы возвращаются удаленные объекты из корзины.png
     
 - summary: |
-    Нет возможности очистить фильт после выбора категории
+    Нет возможности очистить фильтр после выбора категории
   environment: |
     Браузер
     Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
