--- a/bugreports.yml
+++ b/bugreports.yml
@@ -80,7 +80,7 @@
   expected-result: |
     отобразились товары категории "laptops"
   actual-result: |
-    результат поиска некорректен
+    отображается сообщение "Nothing found!"
 
 - summary: |
     Не корректно работает фильтр по цене
