--- a/regress-report.yml
+++ b/regress-report.yml
@@ -78,12 +78,126 @@ test-cases:
 
 bugreports:
   - summary: |
-      Короткое описание ошибки
+      При обновлении страницы возвращаются удаленные объекты из корзины
     environment: |
-      Ссылка на билд/коммит/версия ПО и всего окружения
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
     steps-to-reproduce: |
-      Полный перечень шагов для воспроизведения, на каком шаге произошла ошибка
+      1. Открываем страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. В верхнем правом углу нажимаем кнопку "Language"
+      3. Выбираем "Russian"
+      4. Нажимаем кнопку "В корзину" у любого товара
+      5. В верхнем правом углу нажимаем кнопку "Корзина"
+      6. В верхней части страницы нажимаем "Очистить корзину"
+      7. Нажимаем кнопку обновить страницу
     expected-result: |
-      Какой результат должен был быть без ошибки
+      Корзина пустая без добавленных товаров
     actual-result: |
-      Какой результат получился на самом деле
+      В корзине отображается товар который мы удалили
+
+  - summary: |
+      Нет возможности очистить фильтр после выбора категории
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Зайти на страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. Нажать на кнопку "Категория"
+      3. Выбрать категорию "smartphones"
+      4. Нажать на кнопку "Категория"
+      5. повторно нажать на категорию "smartphones"
+    expected-result: |
+      фильтр по категории сбросился
+    actual-result: |
+      при нажатии ничего не происходит, кнопки сбросиь фильтр тоже нет
+
+  - summary: |
+      Фильтр по цене ищет без учета скидки
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Зайти на страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. Ввести фильтр по цене от 100 до 500
+    expected-result: |
+      отображаются товары в данном ценовом диапазоне
+    actual-result: |
+      отображаются товары без учета скидки
+
+  - summary: |
+      После обновления страницы язык меняется на английкий, если был выбран русский перед этим
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Открываем страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. В верхнем правом углу нажимаем кнопку "Language""
+      3. Выбираем "Russian"
+      4. Обновляем страницу
+    expected-result: |
+      обновилась страница язык русский сохранился
+    actual-result: |
+      Язык страницы стал английским
+
+  - summary: |
+      Не работает поиск по ключевому слову
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Открываем страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. В нижней части левого меню ищем раздел цена
+      3. Вводим слово "laptops"
+    expected-result: |
+      отобразились товары категории "laptops"
+    actual-result: |
+      Отображаются товары не относящиеся к данной категории
+
+  - summary: |
+      Не отправляет данные о заказе на сервер
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Открываем страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. Добавляем любой товар в корзину
+      3. Нажимаем в вехней части сайта кнопку "Корзина"
+      4. Нажимаем кнопку "Оформить заказ"
+    expected-result: |
+      Данные отправлены на сервер
+    actual-result: |
+      Ошибка 500 в DevTools во вкладке Network
+
+  - summary: |
+      Не ищет товар при ручном вводе бренда
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Открываем страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. В левом меню в строке поиск вводим бренд "apple"
+    expected-result: |
+      Отображаются товарны данного производителя
+    actual-result: |
+      Отображаются товары не относящиеся к данной категории
+
+  - summary: |
+      при переключении страницы с товарами, меняются производители в левом меню
+    environment: |
+      Браузер
+      Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
+      ОС	Windows 11 Домашняя
+    steps-to-reproduce: |
+      1. Открываем страницу https://products-store-git-v2bugfixes-hexlet-components.vercel.app/
+      2. Нажимаем кнопку "Следующая"
+    expected-result: |
+      страница переключилась на следующую, левое меню с производителями не изменилось
+    actual-result: |
+      страница переключилась на следующую, левое меню с производителями изменилось
