--- a/regress-report.yml
+++ b/regress-report.yml
@@ -25,23 +25,19 @@ test-cases:
     status: pass
 
   - summary: |
-      Проверка доступности сайта на мобильном устройстве
+      Отображение сайта на мобильном устройстве
     status: pass
 
   - summary: |
-      Проверка доступности сайта в браузере Mozila Firefox
+      Отображение сайта в браузере Mozila Firefox
     status: pass
 
   - summary: |
-      Проверка доступности сайта в браузере Opera
+      Отображение сайта в браузере Opera
     status: pass
 
   - summary: |
-      Проверка доступности сайта в браузере Microsoft Edge
-    status: pass
-
-  - summary: |
-      Проверка использует ли сайт протокол HTTPS
+      Отображение сайта в браузере Microsoft Edge
     status: pass
 
   - summary: |
@@ -53,27 +49,27 @@ test-cases:
     status: fail
 
   - summary: |
-      Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
+      Проверка возможности оформить заказ с переходом на страницу оплаты
     status: fail
 
   - summary: |
-      При примененни фильтра страница не должна полностью обновлятся
+      При примененни фильтра страница не обновлется
     status: pass
 
   - summary: |
-      Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды
+      Названия брендов в фильтре соответствуют тому, как пишут сами бренды
     status: fail
 
   - summary: |
-      Названия брендов не дублируются
+      Проверка дублей в назвинии брендов
     status: fail
 
   - summary: |
-      Пользователь должен иметь возможность поиска бренда, при вводе в строке поиска названия бренда
+      Возможность поиска бренда, при вводе в строке поиска названия бренда
     status: fail
 
   - summary: |
-      Пользователь должен иметь возможность удалять товары из корзины
+      Возможность удалять товары из корзины
     status: pass
 
 bugreports:
@@ -114,7 +110,7 @@ bugreports:
       при нажатии ничего не происходит, кнопки сбросиь фильтр тоже нет
 
   - summary: |
-      Фильтр по цене ищет без учета скидки
+      Не учитывается скидка при фильтрации по цене
     environment: |
       Браузер
       Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
@@ -128,7 +124,7 @@ bugreports:
       отображаются товары без учета скидки
 
   - summary: |
-      После обновления страницы язык меняется на английкий, если был выбран русский перед этим
+      Сайт не запоминает смену языка
     environment: |
       Браузер
       Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
