--- a/testing-report.yml
+++ b/testing-report.yml
@@ -24,23 +24,19 @@
   status: pass
   
 - summary: |
-    Проверка доступности сайта на мобильном устройстве
+    Отображение сайта на мобильном устройстве
   status: pass
 
 - summary: |
-    Проверка доступности сайта в браузере Mozila Firefox
+    Отображение сайта в браузере Mozila Firefox
   status: pass
 
 - summary: |
-    Проверка доступности сайта в браузере Opera
+    Отображение сайта в браузере Opera
   status: pass
 
 - summary: |
-    Проверка доступности сайта в браузере Microsoft Edge
-  status: pass
-
-- summary: |
-    Проверка использует ли сайт протокол HTTPS
+    Отображение сайта в браузере Microsoft Edge
   status: pass
 
 - summary: |
@@ -52,25 +48,25 @@
   status: fail
 
 - summary: |
-    Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
+    Проверка возможности оформить заказ с переходом на страницу оплаты
   status: fail
 
 - summary: |
-    При примененни фильтра страница не должна полностью обновлятся
+    При примененни фильтра страница не обновлется
   status: pass
 
 - summary: |
-    Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды
+    Названия брендов в фильтре соответствуют тому, как пишут сами бренды
   status: fail
 
 - summary: |
-    Названия брендов не дублируются
+    Проверка дублей в назвинии брендов
   status: fail
 
 - summary: |
-    Пользователь должен иметь возможность поиска бренда, при вводе в строке поиска названия бренда
+    Возможность поиска бренда, при вводе в строке поиска названия бренда
   status: pass
 
 - summary: |
-    Пользователь должен иметь возможность удалять товары из корзины 
+    Возможность удалять товары из корзины 
   status: pass
