--- a/test-cases.yml
+++ b/test-cases.yml
@@ -84,7 +84,7 @@
       отображается товар добавленный в корзину
       
   - summary: |
-      Проверка доступности сайта на мобильном устройстве
+      Отображение сайта на мобильном устройстве
     requirement: |
       При открытии сайта на мобильном устройстве отображаетс сайт
     prerequisites: |
@@ -99,7 +99,7 @@
       отображается сайт https://hexlet-products-store.vercel.app/
       
   - summary: |
-      Проверка доступности сайта в браузере Mozila Firefox
+      Отображение сайта в браузере Mozila Firefox
     requirement: |
       При открытии сайта на в браузере Mozila Firefox отображаетс сайт
     prerequisites: |
@@ -113,7 +113,7 @@
       отображается сайт https://hexlet-products-store.vercel.app/
       
   - summary: |
-      Проверка доступности сайта в браузере Opera
+      Отображение сайта в браузере Opera
     requirement: |
       При открытии сайта на в браузере Opera отображаетс сайт
     prerequisites: |
@@ -127,7 +127,7 @@
       отображается сайт https://hexlet-products-store.vercel.app/
       
   - summary: |
-      Проверка доступности сайта в браузере Microsoft Edge
+      Отображение сайта в браузере Microsoft Edge
     requirement: |
       При открытии сайта на в браузере Microsoft Edge отображаетс сайт
     prerequisites: |
@@ -137,19 +137,6 @@
       сайт https://hexlet-products-store.vercel.app/
     steps:
       - открыть сайт https://hexlet-products-store.vercel.app/
-    expected-result: |
-      отображается сайт https://hexlet-products-store.vercel.app/
-      
-  - summary: |
-      Проверка использует ли сайт протокол HTTPS
-    requirement: |
-      При открытии сайта в строке браузера URL начитается с HTTPS
-    prerequisites: |
-      открыть сайт hexlet-products-store.vercel.app/
-    test-data: |
-      сайт hexlet-products-store.vercel.app/
-    steps:
-      - открыть сайт hexlet-products-store.vercel.app/
     expected-result: |
       отображается сайт https://hexlet-products-store.vercel.app/
       
@@ -186,7 +173,7 @@
       товары ранее добавленные в корзину сохраняются
 
   - summary: |
-      Пользователь должен иметь возможность оформить заказ с возможностью перехода на страницу оплаты
+      Проверка возможности оформить заказ с переходом на страницу оплаты
     requirement: |
       после нажатия на кнопку "Оформить заказ" должно перекинуть на страницу оплаты
     prerequisites: |
@@ -202,7 +189,7 @@
       открывается страница оплаты
 
   - summary: |
-      При примененни фильтра страница не должна полностью обновлятся
+      При примененни фильтра страница не обновлется
     requirement: |
       после нажатия на кнопку фильтра по производителю, страница не уходит в перезагрузку
     prerequisites: |
@@ -215,7 +202,7 @@
       отображает товары данной категории без перезагрузки страницы
 
   - summary: |
-      Все названия брендов в фильтре должны соответсовать тому, как пишут сами бренды
+      Названия брендов в фильтре соответствуют тому, как пишут сами бренды
     requirement: |
       Сравнить на корректность названия всех брендов
     prerequisites: |
@@ -228,7 +215,7 @@
       в меню фильтра производителя отображает бренды корректно
 
   - summary: |
-      Названия брендов не дублируются
+      Проверка дублей в назвинии брендов
     requirement: |
       Сравнить на дубликаты названия всех брендов
     prerequisites: |
@@ -241,7 +228,7 @@
       в меню фильтра производителя отображает бренды без повторений
 
   - summary: |
-      Пользователь должен иметь возможность поиска бренда, при вводе в строке поиска названия бренда
+      Возможность поиска бренда, при вводе в строке поиска названия бренда
     requirement: |
       в левом меню фильтр, в строке поиска можно ввести название бренда и отобразить все его товары
     prerequisites: |
@@ -255,7 +242,7 @@
       отображаются товары данной категории
 
   - summary: |
-      Пользователь должен иметь возможность удалять товары из корзины
+      Возможность удалять товары из корзины
     requirement: |
       при нажатии кнопки "Удалить" в корзине, товар удаляется
     prerequisites: |
