--- a/bugreports.yml
+++ b/bugreports.yml
@@ -37,7 +37,7 @@
     при нажатии ничего не происходит, кнопки сбросиь фильтр тоже нет
 
 - summary: |
-    Фильтр по цене ищет без учета скидки
+    Не учитывается скидка при фильтрации по цене
   environment: |
     Браузер
     Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
@@ -52,7 +52,7 @@
     Ошибка изображена на скриншоте assets/bug.png
 
 - summary: |
-    После обновления страницы язык меняется на английкий, если был выбран русский перед этим
+    Сайт не запоминает смену языка
   environment: |
     Браузер
     Google Chrome Версия 108.0.5359.125 (Официальная сборка), (64 бит)
